<resources>
    <string name="tvl_chat_pwd_hint">#聊口令#长按复制此条消息，打开TV聊即可添加我为好友</string>
    <string name="common_back">返回</string>
    <string name="common_search">搜索</string>
    <string name="common_personal_data">个人资料</string>
    <string name="notification_watiing_process">正在处理请稍候...</string>
    <string name="common_networkIsDisconnection_failed_no_network">当前网络不可用,请检查网络连接.</string>
    <string name="common_networkConnection_timeout">连接服务器超时!</string>
    <string name="common_loading">正在加载...</string>
    <string name="common_date_yesterday">昨天</string>
    <string name="common_date_tomorrow">明天</string>
    <string name="common_date_week_monday">星期一</string>
    <string name="common_date_week_tuesday">星期二</string>
    <string name="common_date_week_wednesday">星期三</string>
    <string name="common_date_week_thursday">星期四</string>
    <string name="common_date_week_friday">星期五</string>
    <string name="common_date_week_saturday">星期六</string>
    <string name="common_date_week_sunday">星期日</string>
    <string name="common_date_year">年</string>
    <string name="common_date_month_of_year">月</string>
    <string name="common_date_day_of_month">日</string>
    <string name="common_date_hour">时</string>
    <string name="common_date_minute">分</string>
    <string name="welcome_enter">立即进入</string>
    <string name="common_recv_file">已收到文件</string>
    <string name="common_more">更多</string>
    <string name="common_confirm_name">确定</string>
    <string name="common_return_name">返回</string>
    <string name="common_no_string">无</string>
    <string name="user_logged_with_org_disable">您所在的组织已被管理员禁用，您被下线</string>
    <string name="user_logged_with_other_device">用户在其他地方登录， 程序2秒后自动退出</string>
    <string name="user_logged_with_password_change">您的登录密码已被修改，请重新登录</string>
    <string name="user_logged_with_resource_change">系统资源已被修改，请重新登录</string>
    <string name="user_logged_with_deleted">您的账号已被管理员删除,您被迫下线.</string>
    <string name="user_logged_with_failed">重新登录失败</string>
    <string name="error_connect_to_server">无法连接到服务器，请确认网络连接</string>
    <string name="error_version_to_connect_server">连接服务器成功验证错误</string>
    <string name="error_no_resource">资源不足，请联系管理员</string>
    <string name="error_resource_over_time">组织资源过期，请联系管理员</string>
    <string name="error_org_disable">您所在的组织已被管理员禁用，请联系管理员</string>
    <string name="error_user_disable">用户被禁用，请和您的管理员联系。</string>
    <string name="jpush_message_content">你收到一条新的消息</string>
    <string name="jpush_video_content">正在邀请你视频聊天</string>
    <string name="jpush_audio_content">语音邀请</string>
    <string name="jpush_conf_content">邀请您入会</string>
    <string name="crowdApplicantDetailActivity_additional_msg">附加消息: </string>
    <string name="crowdApplicantDetailActivity_nothing">无</string>
    <string name="messageAuthenticationActivity_message_youBecomeFriend">你们已成为了好友</string>
    <string name="messageAuthenticationActivity_message_refuseYourFriendRequests">拒绝了你的好友申请</string>
    <string name="messageAuthenticationActivity_message_waitingForOtherAuthentication">等待对方验证</string>
    <string name="messageAuthenticationActivity_message_refused">已拒绝</string>
    <string name="messageAuthenticationActivity_message_allowed">已同意</string>
    <string name="messageAuthenticationActivity_message_verification">好友验证</string>
    <string name="messageAuthenticationActivity_message_addedYouAsFriend">已添加您为好友</string>
    <string name="messageAuthenticationActivity_message_group_verification">群验证</string>
    <string name="contactDetail_titlebar_title_text">@string/common_personal_data</string>
    <string name="contactDetail_titlebar_title_text1">好友申请</string>
    <string name="contactDetail_titlebar_title_text2">验证通知</string>
    <string name="contactDetail_AuthenticationState_allowed_apply">已同意该申请</string>
    <string name="contactDetail_AuthenticationState_refused_apply">已拒绝该申请</string>
    <string name="contactDetail_AuthenticationState_refused_your_apply">拒绝你的好友申请</string>
    <string name="contactDetail_toast_text_notOnlineCanNotVoice">对方目前不在线，无法语音通话</string>
    <string name="contactDetail_take_camera">相机拍照</string>
    <string name="contactDetail_take_photo">相册选取</string>
    <string name="friendManagementActivity_titlebar_right_text">完成</string>
    <string name="friendManagementActivity_titlebar_left_text">@string/common_back</string>
    <string name="friendManagementActivity_titlebar_right_text1">发送</string>
    <string name="friendManagementActivity_titlebar_left_text1">@string/common_personal_data</string>
    <string name="friendManagementActivity_titlebar_left_text2">身份验证</string>
    <string name="friendManagementActivity_toast_text_applySentSuccess">您的好友申请发送成功</string>
    <string name="friendManagementActivity_toast_text_reduseAddAsFriend">对方不允许加为好友</string>
    <string name="friendManagementActivity_toast_text_applySentFail">您的好友申请发送失败</string>
    <string name="authenticationActivity_titlebar_back">@string/common_back</string>
    <string name="authenticationActivity_titlebar_back1">@string/common_personal_data</string>
    <string name="authenticationActivity_titlebar_title">拒绝理由</string>
    <string name="authenticationActivity_titlebar_title1">身份验证</string>
    <string name="authenticationActivity_objection_hint">请输入拒绝理由</string>
    <string name="authenticationActivity_authentication_info_hint">请输入验证信息</string>
    <string name="authenticationActivity_send_success_hint">已经添加为好友</string>
    <string name="conference_create_title">发起会议</string>
    <string name="conference_invition_button_text">发出邀请</string>
    <string name="conference_create_conf_name">会议名称</string>
    <string name="conference_create_conf_start_time">开始时间</string>
    <string name="conference_create_conf_end_time">结束时间</string>
    <string name="conference_create_confirm">确定</string>
    <string name="conference_create_cancel">返回</string>
    <string name="conference_default_name">召开的会议</string>
    <string name="conference_create_mute">会场静音</string>
    <string name="conference_create_invite">邀请其他人</string>
    <string name="error_conf_title_required">会议名称不能为空!</string>
    <string name="error_conf_start_time_required">会议开始时间不能为空!</string>
    <string name="error_conf_end_time_required">会议结束时间不能为空!</string>
    <string name="error_create_conference_failed_from_server_side">发起会议失败</string>
    <string name="error_time_out_create_conference_failed">发起会议超时</string>
    <string name="error_create_conference_failed_no_exist">该会议已不存在！</string>
    <string name="error_conf_start_time_format_failed">会议开始时间格式错误: yyyy-MM-dd HH:mm</string>
    <string name="error_conf_do_not_permit_create_piror_conf">不允许创建历史会议</string>
    <string name="confs_title">我 的 信 息</string>
    <string name="error_request_enter_conference_time_out">登入超时</string>
    <string name="error_request_enter_conference_no_resource">资源不足，请联系管理员</string>
    <string name="error_request_enter_conference_not_exist">无法登录，会议不存在</string>
    <string name="requesting_delete_conference">通知</string>
    <string name="requesting_enter_conference">正在登入...</string>
    <string name="error_can_not_connect_server">无法连接到服务器</string>
    <string name="conversations_delete_conf">删除该会议</string>
    <string name="conversations_delete_conversaion">删除该会话</string>
    <string name="conversations_kick_notification">你已被主席请出会议</string>
    <string name="confs_is_deleted_notification">此会议已被删除</string>
    <string name="confs_public_chatting">公共聊天</string>
    <string name="confs_doc">文档共享</string>
    <string name="confs_attendee_title">参会人数</string>
    <string name="confs_camear_quanlity">视频质量</string>
    <string name="confs_camear_quanlity_high">高</string>
    <string name="confs_camear_quanlity_middle">中</string>
    <string name="confs_camear_quanlity_low">低</string>
    <string name="conf_notification_joined_meeting">进入会议室</string>
    <string name="conf_notification_quited_meeting">离开会议室</string>
    <string name="error_exceed_support_video_count">最多只支持4路视频</string>
    <string name="error_no_second_camera">用户没有另一个摄像头</string>
    <string name="error_no_permission_to_invitation">主席禁用了邀请功能</string>
    <string name="warning_under_sync">主席正在同步，无法切换文档</string>
    <string name="warning_no_attendee_selected">您未选择任何联系人</string>
    <string name="warning_downloading_doc">正在下载文档...</string>
    <string name="warning_showloading_doc">正在加载文档...</string>
    <string name="confs_error_load_doc">文档加载失败</string>
    <string name="error_open_device_disable">设备已被禁用，无法打开</string>
    <string name="confs_user_video_device_item">视频</string>
    <string name="confs_title_button_logout_name">退出会议</string>
    <string name="confs_title_button_request_host_name">申请主讲</string>
    <string name="confs_title_button_release_host_name">释放主讲</string>
    <string name="confs_toast_get_control_permission">您现在已成为主讲人</string>
    <string name="confs_toast_cancel_control_permission">您的主讲申请已被取消</string>
    <string name="confs_toast_reject_control_permission">您的主讲申请已被取消</string>
    <string name="confs_toast_release_control_permission">您的主讲权已被释放</string>
    <string name="conference_request_host_list_item_content">申请主讲</string>
    <string name="conference_request_host_list_item_button_name_accept">同意</string>
    <string name="conference_request_host_list_item_button_name_reject">拒绝</string>
    <string name="conference_chair_man_control_window_item_message">会议消息</string>
    <string name="conference_toast_sharing_failed">主讲权已被取消，共享失败</string>
    <string name="conference_toast_no_meeting">您当前没有会议消息</string>
    <string name="conference_toast_chairman_synchronous_video">主席正在同步视频</string>
    <string name="contact_message_pic_text">图片</string>
    <string name="contact_message_send_button">发  送</string>
    <string name="contact_message_copy_message">已复制</string>
    <string name="contact_message_pop_up_item_copy">复制</string>
    <string name="contact_message_pop_up_item_del">删除</string>
    <string name="contact_message_pop_up_item_contact_management">分组管理</string>
    <string name="contact_message_pop_up_item_crowd_management">群组管理</string>
    <string name="contact_message_pop_up_item_resend">重新发送</string>
    <string name="contact_message_pop_up_item_redownload">重新下载</string>
    <string name="error_contact_messag_invalid_user_id">错误的用户id</string>
    <string name="error_contact_messag_invalid_image_path">不可用的图片地址</string>
    <string name="error_contact_messag_time_too_short">录制时间太短</string>
    <string name="error_contact_message_face_too_much">单条消息表情不能超过10张</string>
    <string name="contact_message_button_up_to_cancel">松开手指， 取消发送</string>
    <string name="contact_message_button_up_to_send">松开， 结束</string>
    <string name="contact_message_button_send_audio_msg">按住  留言</string>
    <string name="contact_message_voice_dialog_text">手指上滑， 取消发送</string>
    <string name="contact_message_voice_dialog_cancel_text">松开手指， 取消发送</string>
    <string name="contact_message_voice_dialog_waring_text">录制时间太短</string>
    <string name="contact_message_message_cancelled">已取消发送</string>
    <string name="activiy_contact_group_button_confirm">确定</string>
    <string name="activiy_contact_group_add_hint">请输入分组名</string>
    <string name="activiy_contact_group_button_cancel">取消</string>
    <string name="activiy_contact_group_dialog_title_create">添加分组</string>
    <string name="contacts_delete_confirm"> 确定删除好友吗？</string>
    <string name="conversation_select_file_entry_need_validation_messages">需要验证消息</string>
    <string name="setting_updatepassword_old">原密码</string>
    <string name="setting_updatepassword_new">新密码</string>
    <string name="setting_updatepassword_newPassword">确认新密码</string>
    <string name="setting_updatepassword_update">修改</string>
    <string name="crowd_detail_qulification_rule_no_rule">允许任何人</string>
    <string name="crowd_detail_qulification_rule_never">不允许任何人</string>
    <string name="htab0">上课</string>
    <string name="htab1">发现</string>
    <string name="htab2">TV聊</string>
    <string name="htab3">TV协助</string>
</resources>