<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/conference_activity_popup_width"
    android:layout_height="@dimen/conference_activity_popup_height"
    android:background="@drawable/common_pop_up_window_bg"
    android:paddingTop="10dp"
    android:paddingBottom="10dp" >
    <TextView
        android:id="@+id/state_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/common_item_text_size"
        android:text="@string/confs_camear_quanlity"
        android:textColor="#000000" />
    <RelativeLayout
        android:id="@+id/radioLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/state_text" >
        <RadioGroup
            android:id="@+id/ws_meeting_setting_popup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:layout_centerInParent="true" >
            <RadioButton
                android:id="@+id/ws_meeting_setting_popup_high_button"
                style="@style/leftRadioStyle"
                android:layout_weight="1"
                android:text="@string/confs_camear_quanlity_high" />
            <RadioButton
                android:id="@+id/ws_meeting_setting_popup_middle_button"
                style="@style/leftRadioStyle"
                android:layout_weight="1"
                android:text="@string/confs_camear_quanlity_middle" />
            <RadioButton
                android:id="@+id/ws_meeting_setting_popup_low_button"
                style="@style/leftRadioStyle"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/confs_camear_quanlity_low" />
        </RadioGroup>
    </RelativeLayout>
</RelativeLayout>