<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/setting_com_backgroud"
    android:gravity="center_horizontal"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >
    <include layout="@layout/common_activity_title_layout" />
    <TextView style="@style/Com_activity_title_Divider_Style" />
    <com.bizcom.vc.widget.cus.edittext.ClearEditText
        android:id="@+id/ws_setting_updatePsssword_old"
        android:layout_width="@dimen/updatepassword_btn_width"
        android:layout_height="@dimen/regist_common_height"
        android:layout_marginTop="@dimen/common_margin_top_head_layout"
        android:background="@drawable/ws_com_edittext_bg"
        android:gravity="center_vertical"
        android:inputType="text"
        android:paddingEnd="@dimen/common_padding_horizontal"
        android:paddingLeft="@dimen/common_padding_horizontal"
        android:paddingStart="@dimen/common_padding_horizontal"
        android:text="@string/setting_updatepassword_old"
        android:textColor="@color/regist_edit_hint"
        android:textSize="@dimen/common_title_text_size" />
    <com.bizcom.vc.widget.cus.edittext.ClearEditText
        android:id="@+id/ws_setting_updatePsssword_new"
        android:layout_width="@dimen/updatepassword_btn_width"
        android:layout_height="@dimen/regist_common_height"
        android:layout_marginTop="@dimen/common_margin_verticial"
        android:background="@drawable/ws_com_edittext_bg"
        android:gravity="center_vertical"
        android:inputType="text"
        android:paddingEnd="@dimen/common_padding_horizontal"
        android:paddingLeft="@dimen/common_padding_horizontal"
        android:paddingStart="@dimen/common_padding_horizontal"
        android:text="@string/setting_updatepassword_new"
        android:textColor="@color/regist_edit_hint"
        android:textSize="@dimen/common_title_text_size" />
     <com.bizcom.vc.widget.cus.edittext.ClearEditText
        android:id="@+id/ws_setting_updatePsssword_new_confim"
        android:layout_width="@dimen/updatepassword_btn_width"
        android:layout_height="@dimen/regist_common_height"
        android:layout_marginTop="@dimen/common_margin_verticial"
        android:background="@drawable/ws_com_edittext_bg"
        android:gravity="center_vertical"
        android:inputType="text"
        android:paddingEnd="@dimen/common_padding_horizontal"
        android:paddingLeft="@dimen/common_padding_horizontal"
        android:paddingStart="@dimen/common_padding_horizontal"
        android:text="@string/setting_updatepassword_newPassword"
        android:textColor="@color/regist_edit_hint"
        android:textSize="@dimen/common_title_text_size" />
     <TextView
            android:id="@+id/ws_setting_updatePasswrod_finish"
            android:layout_width="@dimen/updatepassword_btn_width"
            android:layout_height="@dimen/regist_common_height"
            android:background="@drawable/regist_corner_button_normal"
            android:gravity="center"
            android:layout_marginTop="@dimen/common_margin_verticial"
            android:paddingLeft="@dimen/regist_validateBT_padding"
            android:paddingRight="@dimen/regist_validateBT_padding"
            android:text="@string/setting_updatepassword_update"
            android:textColor="@color/common_item_text_color"
            android:textSize="@dimen/common_title_text_size" />
</LinearLayout>